--- a/index.css
+++ b/index.css
@@ -953,6 +953,9 @@
         color: #14100c;
         font-size: 48px;
         font-weight: 800;
+        @media screen and (max-width:767px) {
+          font-size: 27px;
+        }
       }
     }
   }
